rewrite content for lawnscaping service page

--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -29,7 +29,6 @@ permalink: 'services/landscaping/'
 <!-- ============================================ -->
 <!--                 Content Page                 -->
 <!-- ============================================ -->
-
 <section id="content-page-1402">
     <div class="cs-container">
         <div class="cs-image-group">
@@ -39,72 +38,81 @@ permalink: 'services/landscaping/'
                     <source media="(max-width: 600px)" srcset="/assets/images/services/landscaping-480.webp">
                     <!--Tablet and above Image-->
                     <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping-768.webp">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/landscaping-1200.webp" alt="landscaping team laying mulch" width="542" height="728">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/landscaping-1200.webp" alt="landscaping team laying mulch in Macomb Michigan" width="542" height="728">
                 </picture>
             </div>
         </div>
 
         <div class="cs-content">
             <h1 class="cs-title"><span class="cs-color">Landscaping</span> Services in Macomb, MI</h1>
-            <h3>Comprehensive Landscaping for Homes and Businesses</h3>
+            <h3>Professional Landscaping for Homes & Businesses</h3>
+
             <p>
-                At Macomb Landscaping Services, we handle everything from simple mulch refreshes to complete landscape transformations. 
-                Our experienced team provides professional landscaping solutions across Macomb, Shelby Township, and Chesterfield—helping your property stand out in every season.
-            </p>
-            <p>
-                Whether you’re improving curb appeal, refreshing existing beds, or planning a full redesign, we’ll bring your vision to life with skill, care, and attention to detail.
+                Our landscaping team serves homeowners and businesses throughout Macomb, Shelby Township, Chesterfield, and nearby areas. 
+                Whether you need a simple refresh or a full outdoor makeover, we deliver clean, professional results that improve curb appeal and property value.
             </p>
 
-            <h2>Our Landscaping Services</h2>
+            <p>
+                From mulch installation and trimming to stone work and full redesigns, we handle every project with attention to detail, quality materials, and reliable service.
+            </p>
+
+            <h2>Landscaping Services We Offer</h2>
+
             <h3>Mulching</h3>
             <p>
-                Our most popular service, mulching improves curb appeal while protecting soil and reducing weed growth. We offer various mulch colors and materials to match your property’s aesthetic.
+                Mulching is one of the fastest and most affordable ways to improve the look of your property. 
+                We install premium mulch in a variety of colors and materials to reduce weeds, retain moisture, and create a crisp, polished appearance.
             </p>
 
-            <h3>Hardscaping & Rock Work</h3>
+            <h3>Hardscaping & Rock Installation</h3>
             <p>
-                From decorative stone borders to retaining walls and walkways, our team designs and installs durable, visually striking hardscapes that enhance your outdoor spaces.
+                Decorative stone borders, rock beds, walkways, and retaining walls—we design and install durable hardscapes that elevate your landscape while reducing long-term maintenance.
             </p>
 
             <h3>Tree & Shrub Trimming</h3>
             <p>
-                Maintain the health and appearance of your trees and shrubs with professional trimming and pruning services, ensuring your landscape stays clean and well-balanced.
+                Keep your outdoor space healthy and well-maintained with professional trimming and pruning. 
+                We remove dead branches, shape shrubs, and restore balance to overgrown areas.
             </p>
 
-            <h3>Tree Removal & Stump Grinding Services</h3>
+            <h3>Tree Removal & Stump Grinding</h3>
             <p>
-                We safely remove hazardous or unwanted trees and grind stumps down below ground level, leaving your property clean and ready for new landscaping or construction.
-            </p>
-            <h3>Sod Installation & Replacement</h3>
-            <p>
-                Need a fresh start? We install and replace sod to create a healthy, green lawn instantly—perfect for new builds, damaged areas, or complete yard makeovers.
+                Our team safely removes hazardous or unwanted trees and grinds stumps below ground level, allowing you to reclaim your yard and prepare for new landscaping.
             </p>
 
-            <h3>Sprinkler Systems</h3>
+            <h3>Sod Installation & Lawn Replacement</h3>
             <p>
-                Unlike many landscaping companies, we specialize in sprinkler installation, maintenance, and seasonal start-ups and shut-downs. 
-                We even warranty against freeze damage for systems winterized by our team.
+                Instantly refresh your lawn with high-quality sod. Great for damaged lawns, new construction, or homeowners wanting a fast, healthy, green yard without the wait.
             </p>
 
-            <h2>Why Choose Macomb Landscaping Services?</h2>
+            <h3>Sprinkler System Installation & Maintenance</h3>
+            <p>
+                We are one of the few landscaping companies in Macomb specializing in irrigation. 
+                From new sprinkler installs to repairs, start-ups, and winter shut-downs, we keep your lawn properly watered year-round. 
+                Systems winterized by our team are covered against freeze damage.
+            </p>
+
+            <h2>Why Choose Our Macomb Landscaping Team?</h2>
             <ul>
-                <li>Fully insured and trusted by Macomb homeowners and businesses</li>
-                <li>Comprehensive landscaping and irrigation expertise under one roof</li>
-                <li>Free, no-obligation estimates with upfront pricing</li>
-                <li>All work completed before final payment—your satisfaction guaranteed</li>
+                <li>Fully insured and trusted by homeowners across Macomb County</li>
+                <li>Landscaping and irrigation expertise from one dedicated team</li>
+                <li>Fast, free estimates with honest, upfront pricing</li>
+                <li>No final payment until the work is completed and approved</li>
             </ul>
+
             <p>
-                We take pride in delivering clean, professional results that make your property stand out. 
-                Whether it’s mulch, stone, or a complete redesign, we approach every project with precision and care.
+                Every project—big or small—is completed with precision, clean workmanship, and care. 
+                Your property will look sharp, well-maintained, and professionally finished.
             </p>
 
             <h2>Get Your Free Landscaping Estimate</h2>
             <p>
-                Ready to transform your outdoor space? Contact <strong>Macomb Landscaping Services</strong> today for a free estimate on any residential or commercial landscaping project.
+                Ready to upgrade your outdoor space? Contact <strong>Macomb Landscaping Services</strong> today for a fast and free estimate on any residential or commercial project.
             </p>
         </div>
     </div>
 </section>
+
 
 {% include 'components/cta.html' %}
 
