update content for snow-removal service page

--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -35,79 +35,90 @@ permalink: 'services/snow-removal/'
       <div class="cs-flex">
         <picture class="cs-background">
           <!--Mobile Image-->
-         <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup-480.webp">
-                    <!--Tablet and above Image-->
+          <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup-480.webp">
+          <!--Tablet and above Image-->
           <source media="(min-width: 601px)" srcset="/assets/images/services/snow-cleanup-768.webp">
-          <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup-1200.webp"  alt="crew deicing sidewalks and plowing a commercial lot" width="542" height="728">
+          <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup-1200.webp" alt="crew deicing sidewalks and plowing snow in Macomb Michigan" width="542" height="728">
         </picture>
       </div>
     </div>
 
     <div class="cs-content">
       <h1 class="cs-title"><span class="cs-color">Snow Removal</span> in Macomb, MI</h1>
-      <h3>Dependable Plowing & Deicing for Homes and Businesses</h3>
+      <h3>Reliable Plowing, Shoveling & Deicing for Homes and Businesses</h3>
+
       <p>
-        Michigan winters demand fast, reliable service. <strong>Macomb Landscaping Services</strong> provides professional snow removal across Macomb, Shelby Township, Chesterfield, and nearby communities—with crews that clear lots, driveways, and walkways before business hours and during storms.
+        Michigan winters can hit fast—and without reliable snow removal, properties become unsafe and inaccessible. 
+        <strong>Macomb Landscaping Services</strong> provides dependable residential and commercial snow removal across Macomb, Shelby Township, Chesterfield, and surrounding areas.
       </p>
+
       <p>
-        Choose from seasonal contracts or per-push rates, with deicing and route prioritization options to keep your property safe and accessible all winter.
+        Our crews monitor every storm, dispatch early, and keep your property clear before business hours or before you leave for work. Choose from affordable per-push rates or full-season contracts that guarantee service whenever it snows.
       </p>
 
       <h2>Our Winter Services</h2>
       <ul>
-        <li>Residential driveways, sidewalks, porches, and steps</li>
-        <li>Commercial lots, entries, loading areas, and walkways</li>
-        <li>Deicing & traction control (salt or ice-melt blends)</li>
-        <li>Pre-salting before storms and post-storm follow-ups</li>
-        <li>24/7 storm monitoring and on-call dispatch</li>
+        <li>Residential driveways, sidewalks, porches, and entry steps</li>
+        <li>Commercial lots, storefronts, walkways, loading docks, and entrances</li>
+        <li>Salt and deicing treatments (salt, ice-melt blends, calcium chloride)</li>
+        <li>Pre-salting before major events to prevent early ice formation</li>
+        <li>Post-storm cleanups and drift/berm clearing from city plows</li>
+        <li>24/7 storm monitoring and priority dispatch during heavy snowfall</li>
       </ul>
 
       <h2>Plans & Pricing Options</h2>
-      <h3>Seasonal Contracts</h3>
+
+      <h3>Seasonal Snow Contracts</h3>
       <p>
-        Flat-rate coverage for the season with automatic service during qualifying events. Ideal for businesses requiring guaranteed access and predictable budgeting.
+        Flat-rate, unlimited seasonal coverage with automatic service during qualifying snowfall. 
+        Ideal for commercial clients and homeowners who want guaranteed access and predictable budgeting.
       </p>
 
-      <h3>Per-Push Service</h3>
+      <h3>Per-Push Snow Removal</h3>
       <p>
-        Pay as you go with clear per-visit pricing. Great for residential customers or properties with lower snowfall exposure.
+        Pay only when service is needed. Perfect for residential customers, smaller lots, or properties with unpredictable snowfall patterns.
       </p>
 
-      <h3>Premium vs. Economy</h3>
+      <h3>Premium & Economy Options</h3>
       <ul>
-        <li><strong>Premium:</strong> Route prioritization, deicing included, pre-salting during major events, and overnight/early-morning service windows.</li>
-        <li><strong>Economy:</strong> Snow pushing with optional deicing add-on, serviced after priority routes.</li>
+        <li>
+          <strong>Premium Service:</strong> Route prioritization, pre-salting during major storms, deicing included, and overnight/early morning service windows.
+        </li>
+        <li>
+          <strong>Economy Service:</strong> Snow plowing only, with optional add-on deicing. Service occurs after priority routes are completed.
+        </li>
       </ul>
-      <p>
-        Early sign-up discount available for contracts secured before <strong>August</strong>.
-      </p>
+      <p>Early sign-up discounts are available for contracts secured before <strong>August</strong>.</p>
 
-      <h2>Service Triggers & Standards</h2>
+      <h2>Service Standards & Triggers</h2>
       <ul>
-        <li>Common trigger depths available (e.g., 1", 2", or custom)</li>
-        <li>Return visits for drifting and municipal plow berms (as specified in contract)</li>
-        <li>Clean edges at doors, curb lines, and pedestrian paths</li>
-        <li>Documented service logs; photos available upon request</li>
+        <li>Custom trigger depths (1", 2", or preferred measurement)</li>
+        <li>Return visits available for drifting and city plow berms</li>
+        <li>Clean edges around doors, garages, walkways, and curb lines</li>
+        <li>Documented service logs; photos provided upon request</li>
       </ul>
 
-      <h2>Why Choose Macomb Landscaping Services?</h2>
+      <h2>Why Choose Us for Snow Removal in Macomb?</h2>
       <ul>
-        <li>Local, fully insured crews with commercial and residential capability</li>
+        <li>Local, fully insured crews with residential and commercial capability</li>
         <li>Reliable scheduling before business hours for commercial clients</li>
-        <li>Transparent pricing with seasonal or per-push options</li>
-        <li>Deicing expertise to reduce slips and liability risk</li>
+        <li>Transparent seasonal and per-push pricing</li>
+        <li>Deicing expertise to reduce slip hazards and liability risk</li>
+        <li>Fast response times during storms and heavy accumulation</li>
       </ul>
+
       <p>
-        We focus on safety, access, and consistency—so your property stays open and your visitors stay safe.
+        We focus on safety, accessibility, and consistency—keeping your property open, walkable, and worry-free all winter long.
       </p>
 
-      <h2>Get Your Snow Removal Quote</h2>
+      <h2>Get a Free Snow Removal Quote</h2>
       <p>
-        Prepare now for winter. Contact <strong>Macomb Landscaping Services</strong> for a free estimate on seasonal contracts or per-push snow removal with deicing options.
+        Prepare for winter early. Contact <strong>Macomb Landscaping Services</strong> for a free estimate on residential or commercial snow removal, deicing, and seasonal service contracts.
       </p>
     </div>
   </div>
 </section>
+
 
 {% include 'components/cta.html' %}
 
