update desc and title for snow removal

--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -1,6 +1,6 @@
 ---
-title: 'Snow Removal Services in Macomb MI'
-description: 'Reliable snow plowing and deicing for homes and businesses in Macomb, Shelby Township, and Chesterfield. Seasonal contracts or per-push rates with priority routes, pre-salting, and early sign-up discounts.'
+title: 'Snow Removal in Macomb MI | Residential & Commercial Plowing & Deicing'
+description: 'Reliable snow removal in Macomb, Shelby Township, and Chesterfield. We offer residential and commercial plowing, shoveling, and deicing with 24/7 storm monitoring. Free quotes and seasonal contracts available.'
 preloadImg: ''
 permalink: 'services/snow-removal/'
 ---
