add faq to snow removal page

--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -9,6 +9,7 @@ permalink: 'services/snow-removal/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
+    <script defer src="/assets/js/faq.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -119,6 +120,140 @@ permalink: 'services/snow-removal/'
   </div>
 </section>
 
+<!-- ============================================ -->
+<!--                     FAQ                      -->
+<!-- ============================================ -->
+
+<section id="faq-1404">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">FAQ</span>
+      <h2 class="cs-title">Frequently Asked Questions</h2>
+    </div>
+    <div class="cs-faq-group">
+      <!-- FAQ Item 1 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How much does snow removal cost in Macomb, MI?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Pricing depends on driveway size, property type, and whether you choose per-push or a seasonal contract. Most residential visits range from $35–$75, while commercial pricing varies based on lot size and service frequency.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 2 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you offer both residential and commercial snow removal?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We provide snow plowing, shoveling, and deicing for homes, businesses, storefronts, offices, and commercial lots throughout Macomb County.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 3 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What snow depth triggers a service visit?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Common trigger depths are 1" or 2", but we offer custom trigger settings based on your preferences and property needs.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 4 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you offer deicing or salting services?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We apply salt, ice-melt blends, or calcium chloride depending on conditions. Deicing can be included in your contract or added per visit.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 5 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Can you clear walkways, porches, and entrances?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Absolutely. We clear all pedestrian areas including sidewalks, entry steps, porches, pathways, and storefront walkways.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 6 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you service properties before business hours?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Commercial clients receive priority morning service to ensure lots and entrances are clear before customers or employees arrive.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 7 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you monitor storms and dispatch automatically?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We offer 24/7 storm monitoring and automatically dispatch crews during qualifying snowfall events for seasonal contract customers.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 8 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you provide return visits if the city plow blocks my driveway?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We offer return visits for municipal plow berms and drifting based on your service plan or contract terms.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 9 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Are you insured for snow removal work?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Our team is fully insured for both residential and commercial snow removal services.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 10 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How early should I sign up for winter service?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Most customers secure their contract between July and September. Early sign-up ensures priority routing and may qualify for discounted pricing.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 {% include 'components/cta.html' %}
 
