gutter cleaning faq

--- a/src/content/pages/services/guttercleaning.html
+++ b/src/content/pages/services/guttercleaning.html
@@ -9,6 +9,7 @@ permalink: 'services/gutter-cleaning/'
 
 {% block head %}
     <link rel="stylesheet" href="/assets/css/services.css">
+    <script defer src="/assets/js/faq.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -92,6 +93,141 @@ permalink: 'services/gutter-cleaning/'
       <p>
         Ready to schedule your gutter cleaning? Contact <strong>Macomb Landscaping Services</strong> today for a free estimate and convenient service window that fits your schedule.
       </p>
+    </div>
+  </div>
+</section>
+
+<!-- ============================================ -->
+<!--                     FAQ                      -->
+<!-- ============================================ -->
+
+<section id="faq-1404">
+  <div class="cs-container">
+    <div class="cs-content">
+      <span class="cs-topper">FAQ</span>
+      <h2 class="cs-title">Frequently Asked Questions</h2>
+    </div>
+    <div class="cs-faq-group">
+      <!-- FAQ Item 1 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How often should I have my gutters cleaned?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We recommend cleaning gutters at least twice per year—once in spring to clear winter debris and prepare for heavy rains, and once in late fall after most leaves have dropped to prep for winter storms and freeze/thaw cycles.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 2 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What does your gutter cleaning service include?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Our service includes hand removal of leaves, twigs, and roof debris from gutters, complete downspout flushing to ensure clear drainage, minor adjustments to loose hangers and pitch issues, bagging and disposal of all debris, and a visual inspection for trouble spots like leaks, sagging, or separations.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 3 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">How much does gutter cleaning cost in Macomb, MI?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Pricing varies based on your home's size, gutter length, and debris level. We provide clear, upfront pricing and free estimates so you know exactly what to expect before we begin work.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 4 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What happens if clogged gutters aren't cleaned?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Clogged gutters can lead to serious problems including roof leaks, fascia and soffit rot, foundation damage from water pooling, basement flooding, exterior staining, and erosion around your home's perimeter. Regular cleaning prevents these costly issues.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 5 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you flush downspouts as part of the service?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Complete downspout flushing is included in every gutter cleaning to ensure clear drainage from the roof all the way to ground level. This prevents clogs that can cause water backup and overflow.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 6 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Are you insured for gutter cleaning work?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. Our team is fully insured and follows safe ladder and roof practices to protect both our crew and your property during the cleaning process.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 7 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">What do you do with the debris from my gutters?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            We bag and dispose of all debris removed from your gutters—no mess is left behind. Your property will be clean when we're finished.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 8 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Do you offer underground gutter drainage installation?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We install underground buried gutter drainage systems that connect your downspouts to buried PVC pipes, directing water safely away from your foundation. This eliminates surface runoff, prevents erosion and foundation issues, and keeps your landscaping clean and dry year-round.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 9 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">Can you fix minor gutter problems while cleaning?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            Yes. We make minor adjustments to loose hangers and visible pitch issues during cleaning. We also offer add-on services like gutter whitening (exterior stain cleanup), leaf guard installation, and small seam reseals.
+          </p>
+        </div>
+      </div>
+      <!-- FAQ Item 10 -->
+      <div class="cs-faq-item">
+        <button class="cs-button">
+          <span class="cs-button-text">When do I pay for the gutter cleaning service?</span>
+          <span class="cs-indicator" aria-hidden="true"></span>
+        </button>
+        <div class="cs-item-content">
+          <p>
+            No payment is due until the job is completed to your satisfaction. We also provide before/after photos upon request so you can see the quality of our work.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
